# Coursework

./: CMakeLists.txt  README.MD  classes.cpp  coloring.cpp  commandlineparse.cpp  commandlineparser.cpp  main.cpp  prototypes.h  word.cpp  wordcloudgenerator.cpp  wordplace.cpp  wordstats.cpp
src/: commandlineparse.cpp  imagerenderer.cpp  prototypes.h  word.cpp  wordcloudgenerator.cpp  wordplace.cpp  wordstats.cpp
tests/: tests.cpp
